--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<title>Formulário</title>
 	<link rel="stylesheet" href="formulario.css">
+	<script src="helpers.js"></script>
 </head>
+
 <body>
 	<form id="form">
 		<label for="nomeCompleto">Nome completo:</label>
@@ -35,4 +38,5 @@
 
 	<script src="formulario.js"></script>
 </body>
+
 </html>
